tests/invalid/uniq_modes.err_exp
uniq_modes.m:015: In clause for `main(di, uo)':
uniq_modes.m:015:   in argument 2 of call to predicate `io.write'/3:
uniq_modes.m:015:   mode error: variable [38;5;87m`In'[39;49m has instantiatedness
uniq_modes.m:015:   [38;5;203m`mostly_unique',[39;49m
uniq_modes.m:015:   expected instantiatedness was [38;5;40m`unique'.[39;49m
uniq_modes.m:015:   This kind of uniqueness mismatch is usually caused by doing
uniq_modes.m:015:   [38;5;226minput/output[39;49m or [38;5;226msome other kind of destructive update[39;49m [38;5;203min a[39;49m
uniq_modes.m:015:   [38;5;203mcontext where it can be backtracked over,[39;49m such as the
uniq_modes.m:015:   condition of an if-then-else.
uniq_modes.m:015:   Note that it is possible that the cause is code that is
uniq_modes.m:015:   intended to be a [38;5;40mcall[39;49m to the current predicate or function,
uniq_modes.m:015:   but has been accidentally turned into a [38;5;203mclause[39;49m for it by a
uniq_modes.m:015:   typo at the end of the previous line that replaces a comma
uniq_modes.m:015:   by a period.
